adds careerlist page

--- a/stylesheets/abstracts/_variables.scss
+++ b/stylesheets/abstracts/_variables.scss
@@ -14,3 +14,5 @@ $alertGreen:#63B67F;
 $alertYellow:#D99422;
 $calenderGreen:#6FC28B;;
 $calenderYellow: #F0A02A;
+$box--shadow:  0 10px 10px  rgba(0,0,0, 0.6);
+$border-radius: 10px;
