--- a/scss/abstracts/_variables.scss
+++ b/scss/abstracts/_variables.scss
@@ -12,5 +12,5 @@ $timeWrap:#A57FD3;
 $calenderOrange:#E36624;
 $alertGreen:#63B67F;
 $alertYellow:#D99422;
-$calenderGreen:#6FC28B;;
+$calenderGreen:#6FC28B;
 $calenderYellow: #F0A02A;
