--- a/components/footer.html
+++ b/components/footer.html
@@ -1,87 +1,122 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-   
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
-    
-    <link rel="stylesheet" href="stylesheets/main.css">
+    <link rel="stylesheet" href="../css/main.css">
     <title>Footer</title>
 </head>
+
 <body>
-    <footer class="section-footer">
-        <div class="container">
-            <div class="contain1">
-               <div>
-               <h6> <img  src=https://res.cloudinary.com/dtbjhs8a6/image/upload/v1568412229/samples/figma%20homepage/s2c7y0uy86hmk4bsr6zv.png></h6>
-             <h6><img class="footer-image" src="https://res.cloudinary.com/dtbjhs8a6/image/upload/v1568629227/samples/figma%20homepage/m87et8yszesshavwinf0.png">MEDIUM<img src="https://res.cloudinary.com/dtbjhs8a6/image/upload/v1568639192/samples/figma%20homepage/jp5v0zr7mtuisfme6icx.png"> </h6></div>
-             
-                <a href="https://facebook.com"><i class="fa fa-facebook"></i></a>
-                <a href="https://twitter.com"><i class="fa fa-twitter"></i></a>
-                <a href="https://instagram.com"><i class="fa fa-instagram"></i></a>
-                <a href="https://linkedin.com"><i class="fa fa-linkedin"></i></a>
-                <a href="https://youtube.com"><i class="fa fa-youtube"></i></a>
-                
-                
+    <footer>
+        <div class="restriction">
+            <div class="main-footer">
+                <div class="footer-1">
+                    <img src=https://res.cloudinary.com/dtbjhs8a6/image/upload/v1568412229/samples/figma%20homepage/s2c7y0uy86hmk4bsr6zv.png>
+                    <div> <img class="footer-image" src="https://res.cloudinary.com/dtbjhs8a6/image/upload/v1568629227/samples/figma%20homepage/m87et8yszesshavwinf0.png"><span style="margin-right:0.5rem">ENGLISH</span><img src="https://res.cloudinary.com/dtbjhs8a6/image/upload/v1568639192/samples/figma%20homepage/jp5v0zr7mtuisfme6icx.png"></div>
+
+                    <div> <a href="https://facebook.com"><i class="fa fa-facebook"></i></a>
+                        <a href="https://twitter.com"><i class="fa fa-twitter"></i></a>
+                        <a href="https://instagram.com"><i class="fa fa-instagram"></i></a>
+                        <a href="https://linkedin.com"><i class="fa fa-linkedin"></i></a>
+                        <a href="https://youtube.com"><i class="fa fa-youtube"></i></a>
+                    </div>
+                </div>
+
+                <div class="footer-2">
+                    <div>
+                        <p class="footer-line">Hopper</p>
+                        <ul>
+                            <li> The app</li>
+                            <li> Features</li>
+                            <li> Deals</li>
+                            <li> Privacy policy</li>
+                            <li>Terms of service</li>
+                        </ul>
+                    </div>
+                    <div>
+                        <p>Company</p>
+                        <ul>
+                            <li> About</li>
+                            <li> The data</li>
+                            <li> Investors</li>
+                            <li> Locations</li>
+                            <li> Departments</li>
+                        </ul>
+                    </div>
+
+                    <div>
+                        <p>People</p>
+                        <ul>
+                            <li> Mission</li>
+                            <li> Lifestyle</li>
+                            <li> Values</li>
+                            <li> Humans</li>
+                          <li>  <a href="./../pages/careerdetails.html"> Career Details<span style="background:coral;color:white;border-radius: 0.2rem;padding:0.1rem;">47</span></a></li>
+                        </ul>
+                    </div>
+
+                    <div>
+                        <p>Support<img class="support-footer" src=https://res.cloudinary.com/dtbjhs8a6/image/upload/v1568629227/samples/figma%20homepage/qkyithncohhx6pvmgotw.png></p>
+                        <ul>
+                            <li> Flights</li>
+                            <li> Hotels</li>
+                            <li> Predictions</li>
+                            <li> Accounts</li>
+                            <li>Contact us</li>
+                        </ul>
+                    </div>
+
+                    <div>
+                        <p>Media<img class="support-footer" src=https://res.cloudinary.com/dtbjhs8a6/image/upload/v1568629227/samples/figma%20homepage/qkyithncohhx6pvmgotw.png></p>
+                        <ul>
+                            <li> Home</li>
+                            <li> Press kit</li>
+                            <li> Research</li>
+                            <li> Contact</li>
+                            <li>Search</li>
+                        </ul>
+                    </div>
+
+                </div>
             </div>
-       
-               <div>
-                <p class="hoopper">Hopper</p>
-                <ul>
-                    <li> The app</li>
-                    <li> Features</li>
-                    <li> Deals</li>
-                    <li> Privacy policy</li>
-                    <li>Terms of service</li>
-                </ul>
-            </div>
-            <div>
-                <p>Company</p>
-                <ul>
-                    <li> About</li>
-                    <li> The data</li>
-                    <li> Investors</li>
-                    <li> Locations</li>
-                    <li> Departments</li>
-                </ul>
-            </div>
-            <div>
-                <p>People</p>
-                <ul>
-                    <li> Mission</li>
-                    <li> Lifestyle</li>
-                    <li> Values</li>
-                    <li> Humans</li>
-                    <li>Careers</li>
-                </ul>
-            </div>
-            <div>
-                <p>Support<img class="supporticon" src=https://res.cloudinary.com/dtbjhs8a6/image/upload/v1568629227/samples/figma%20homepage/qkyithncohhx6pvmgotw.png></p>
-                <ul>
-                    <li> Flights</li>
-                    <li> Hotels</li>
-                    <li> Predictions</li>
-                    <li> Accounts</li>
-                    <li>Contact us</li>
-                </ul>
-            </div>
-            <div>
-                <p>Media<img class="supporticon" src=https://res.cloudinary.com/dtbjhs8a6/image/upload/v1568629227/samples/figma%20homepage/qkyithncohhx6pvmgotw.png></p>
-                <ul>
-                    <li> Home</li>
-                    <li> Press kit</li>
-                    <li> Research</li>
-                    <li> Contact</li>
-                    <li>Search</li>
-                </ul>
-            </div>
+
         </div>
     </footer>
 
-    
-    
-    <script src=js/main.js></script>
+    <div class="media-footer">
+      <img class="media-hop" src=https://res.cloudinary.com/dtbjhs8a6/image/upload/v1569152594/samples/new%20folder/d44fypvhzbshckeixtfl.png>
+<ul>
+    <li class="media-line">Company<span style="background:coral;color:white;border-radius: 0.2rem;padding:0.1rem;">21</span><img class="media-push1" src=https://res.cloudinary.com/dtbjhs8a6/image/upload/v1569152619/samples/new%20folder/yxb2buurny5yrprcslrx.png></li>
+                            <li class="media-line">People<img class="media-push2" src=https://res.cloudinary.com/dtbjhs8a6/image/upload/v1569152619/samples/new%20folder/yxb2buurny5yrprcslrx.png></li>
+                            <li class="media-line">Support<img class="media-push3" src=https://res.cloudinary.com/dtbjhs8a6/image/upload/v1569152619/samples/new%20folder/yxb2buurny5yrprcslrx.png></li>
+                            <li>Insights<img class="media-push4" src=https://res.cloudinary.com/dtbjhs8a6/image/upload/v1569152619/samples/new%20folder/yxb2buurny5yrprcslrx.png></li>
+                        </ul>
+                        <div class="media-lang">
+                            <p>Language<span><img class="media-push5" src="https://res.cloudinary.com/dtbjhs8a6/image/upload/v1568639192/samples/figma%20homepage/jp5v0zr7mtuisfme6icx.png"></p></span></div>
+                        <div>
+                                <img  style="width: 5rem" src="https://cdns.iconmonstr.com/wp-content/assets/preview/2018/240/iconmonstr-medium-1.png">
+                            <a href="https://facebook.com"><i class="fa fa-facebook"></i></a>
+                            <a href="https://twitter.com"><i class="fa fa-twitter"></i></a>
+                            <a href="https://instagram.com"><i class="fa fa-instagram"></i></a>
+                            <a href="https://linkedin.com"><i class="fa fa-linkedin"></i></a>
+                            <a href="https://youtube.com"><i class="fa fa-youtube"></i></a>
+                          <a href="https://medium.com">  <i class="fa fa-medium"></i></a>
+                           
+
+                        </div>
+                        <a class="media-terms" href="#">Terms of Service</a>
+
+                        <p class="media-copy">&copy 2018 Hopper Inc.</p>
+                    </div>
+
+                    
+
+                    <script src=js/main.js></script>
+
 </body>
+
 </html>
