--- a/components/header.html
+++ b/components/header.html
@@ -1,28 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="css/main.css">
-    <title>Header A</title>
+    <link rel="stylesheet" href="../css/main.css">
+    <title>Header</title>
 </head>
+
 <body>
-    <header id="home">
-        <nav class="navbar">
-        <div class="container">
-        
-            <div><img class="headerimg" src=https://res.cloudinary.com/dtbjhs8a6/image/upload/v1568412230/samples/figma%20homepage/kyr3ezvbrclpaboop9jw.png></div>
-            <ul class="nav">
-                <li><a href="#company">Company</a></li>
-                <li class="people"><a href="#people">People</a></li>
-                <li><a href="#support">Support<img class="supporticon" src=https://res.cloudinary.com/dtbjhs8a6/image/upload/v1568629227/samples/figma%20homepage/qkyithncohhx6pvmgotw.png></a></li>
-                <li class="header-button"><a href="#">Send app to your phone</a></li>
-            </ul>
-        
+    <header>
+        <div class="restriction">
+            <nav class="navbar">
+                <div><a href="./../pages/homepage.html"><img class="headerimg" src=https://res.cloudinary.com/dtbjhs8a6/image/upload/v1568412230/samples/figma%20homepage/kyr3ezvbrclpaboop9jw.png>
+               </a></div>
+                <div>
+                    <ul class="navbar-ul">
+                        <li><a href="./../pages/company.html">COMPANY</a></li>
+                        <li class="people-nav"><a href="people.html">PEOPLE</a></li>
+                        <li><a href="#support">SUPPORT<img class="support-nav" src=https://res.cloudinary.com/dtbjhs8a6/image/upload/v1568629227/samples/figma%20homepage/qkyithncohhx6pvmgotw.png></a></li>
+                        <li class="send-nav"><a href="#">Send app to your phone</a></li>
+                    </ul>
+                </div>
+            </nav>
+
         </div>
-        </nav>
+        <div class="media-header">
+            <img class="media-header1" src=https://res.cloudinary.com/dtbjhs8a6/image/upload/v1569152594/samples/new%20folder/zzf0xbkcjr4a4gjjfgyt.png>
+            <img class="media-header2" src=https://res.cloudinary.com/dtbjhs8a6/image/upload/v1568412230/samples/figma%20homepage/kyr3ezvbrclpaboop9jw.png>
+            <img class="media-header3" src=https://res.cloudinary.com/dtbjhs8a6/image/upload/v1569152594/samples/new%20folder/ta274azqkawrcgi9i5qn.png>
+           
+        </div>
+        
     </header>
+    
     <script src=js/main.js></script>
 </body>
+
 </html>
