--- a/scss/base/_reset.scss
+++ b/scss/base/_reset.scss
@@ -1,32 +1,33 @@
-*{
+* {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
 }
-body{
+
+body {
     font-family: proxima-nova, sans-serif;
-font-style: normal;
-font-weight: 100;
-    
-    line-height:1.6;
-    
+    font-style: normal;
+    font-weight: 100;
+    line-height: 1.6;
 }
 
-h1,h2,h3,h4{
+h1,
+h2,
+h3,
+h4 {
     line-height: 1.3;
 }
 
-a {
-    
-    text-decoration: none;
+ul {
+    list-style: none;
 }
 
-ul{
-    list-style:none;
-}
-
-.img{
+.img {
     width: 100%;
 }
 
-
+.restriction {
+    max-width: 100%;
+    margin: auto;
+    padding: 0 2rem;
+}
