--- a/scss/layouts/_footer.scss
+++ b/scss/layouts/_footer.scss
@@ -1,41 +1,101 @@
-.section-footer{
-padding: 4rem 0;
-
-.container{
-    @include conTain();
-    display: grid;
-    grid-template-columns:repeat(6,1fr);
-    grid-gap:1rem;
+.main-footer {
+    display: flex;
+    margin: 4rem 0;
+    a > i {
+        margin-right: 2rem;
+        margin-top: 9rem;
+        color: $darkGrey;
+    }
+    .footer-1 {
+        width: 40vw;
+        .footer-image {
+            margin-right: 1rem;
+            margin-top: 1.5rem;
+        }
+    }
+    .footer-2 {
+        display: flex;
+        width: 60vw;
+        p {
+            margin-bottom: 1rem;
+        }
+        ul li {
+            margin-bottom: 0.5rem;
+            margin-right: 5rem;
+        }
+        .support-footer {
+            margin-left: 0.5rem;
+        }
+        .footer-line {
+            border-bottom: 2px solid black;
+        }
+    }
+    @media(max-width:500px) {
+        .footer-1 {
+            display: none;
+        }
+        .footer-2 {
+            display: none;
+        }
+    }
 }
 
-.footer-image{
-    margin-bottom: 6rem;
-}
-.contain1{
-    width: 40vw;
+.media-footer {
+    display: none;
+    ul {
+        margin-top: 3rem;
+        li {
+            margin-bottom: 1rem;
+        }
+        .media-line {
+            border-bottom: thin solid grey;
+        }
+    }
+    .media-hop {
+        margin-left: 12rem;
+    }
+    .media-lang {
+        border: 1px solid grey;
+        border-radius: 8px;
+        height: 2rem;
+        width: 27rem;
+        margin-bottom: 1rem;
+        padding-left: 1rem;
+        padding-top: 0.2rem;
+    }
+    .media-terms {
+        margin-left: 10rem;
+        margin-top: 2rem;
+    }
+    .media-push1 {
+        margin-left: 20rem;
+    }
+    .media-push2 {
+        margin-left: 22rem;
+    }
+    .media-push3 {
+        margin-left: 21.5rem;
+    }
+    .media-push4 {
+        margin-left: 21.5rem;
+    }
+    .media-push5 {
+        margin-left: 19rem;
+    }
+    a > i {
+        color: white;
+        background: grey;
+        border-radius: 5rem;
+        padding: 0.5rem;
+    }
+    .media-copy {
+        border-top: thin solid grey;
+        text-align: center;
+    }
 }
 
-
-
-
-p{
-    margin-bottom: 1rem;
-}
-
-ul li{
-    margin-bottom: 0.5rem;
-}
-a > i{
-    margin-right: 2rem;
-    margin-top: 5rem;
-    color:$darkGrey;
-}
-
-.hoopper{
-    border-bottom: 2px solid black;
-}
-
-.supporticon{
-    @include supportIcon();
-}
+@media(max-width:500px) {
+    .media-footer {
+        display: block;
+    }
 }
