Hopper.com Worked on the homepage(home.html) Worked on the company page(The upper part) Worked on the people page(From making the world) Worked on the term of services page All pages are desktop and mobile responsive

--- a/components/footer.html
+++ b/components/footer.html
@@ -1,120 +1,101 @@
-<!DOCTYPE html>
-<html lang="en">
+<footer>
+    <div class="restriction">
+        <div class="main-footer">
+            <div class="footer-1">
+                <img src="https://res.cloudinary.com/dtbjhs8a6/image/upload/v1568412229/samples/figma%20homepage/s2c7y0uy86hmk4bsr6zv.png">
+                <div> <img class="footer-image" src="https://res.cloudinary.com/dtbjhs8a6/image/upload/v1568629227/samples/figma%20homepage/m87et8yszesshavwinf0.png"><span style="margin-right:0.5rem">ENGLISH</span><img src="https://res.cloudinary.com/dtbjhs8a6/image/upload/v1568639192/samples/figma%20homepage/jp5v0zr7mtuisfme6icx.png"></div>
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/main.css">
-    <title>Footer</title>
-</head>
-
-<body>
-    <footer>
-        <div class="restriction">
-            <div class="main-footer">
-                <div class="footer-1">
-                    <img src=https://res.cloudinary.com/dtbjhs8a6/image/upload/v1568412229/samples/figma%20homepage/s2c7y0uy86hmk4bsr6zv.png>
-                    <div> <img class="footer-image" src="https://res.cloudinary.com/dtbjhs8a6/image/upload/v1568629227/samples/figma%20homepage/m87et8yszesshavwinf0.png"><span style="margin-right:0.5rem">ENGLISH</span><img src="https://res.cloudinary.com/dtbjhs8a6/image/upload/v1568639192/samples/figma%20homepage/jp5v0zr7mtuisfme6icx.png"></div>
-
-                    <div> <a href="https://facebook.com"><i class="fab fa-facebook"></i></a>
-                        <a href="https://twitter.com"><i class="fab fa-twitter"></i></a>
-                        <a href="https://instagram.com"><i class="fab fa-instagram"></i></a>
-                        <a href="https://linkedin.com"><i class="fab fa-linkedin"></i></a>
-                        <a href="https://youtube.com"><i class="fab fa-youtube"></i></a>
-                        <a href="https://medium.com"><i class="fab fa-medium"></i></a>
-                    </div>
-                </div>
-
-                <div class="footer-2">
-                    <div>
-                        <p class="footer-line">Hopper</p>
-                        <ul>
-                            <li> The app</li>
-                            <li> Features</li>
-                            <li> Deals</li>
-                            <li> <a style="color:grey;text-decoration:none;" href="../pages/homepagesubnav.html">Homepage Subnav</a> </li>
-                            <li>Terms of service</li>
-                        </ul>
-                    </div>
-                    <div>
-                        <p>Company</p>
-                        <ul>
-                            <li> About</li>
-                            <li> The data</li>
-                            <li> Investors</li>
-                            <li> Locations</li>
-                            <li><a style="color:grey;text-decoration:none;" href="../pages/careerdetails.html"> Careerdetails</a></li>
-                        </ul>
-                    </div>
-
-                    <div>
-                        <p>People</p>
-                        <ul>
-                            <li> Mission</li>
-                            <li><a style="color:grey;text-decoration:none;" href="../pages/companysubnav.html">Company-sub</a></li>
-                            <li> Values</li>
-                            <li> Humans</li>
-                            <li> <a style="color:grey;text-decoration:none;" href="./../pages/careerlist.html">Career<span style="background:coral;color:white;border-radius: 0.2rem;padding:0.1rem;margin-left:1rem;">47</span></a></li>
-                        </ul>
-                    </div>
-
-                    <div>
-                        <p>Support<img class="support-footer" src=https://res.cloudinary.com/dtbjhs8a6/image/upload/v1568629227/samples/figma%20homepage/qkyithncohhx6pvmgotw.png></p>
-                        <ul>
-                            <li> Flights</li>
-                            <li> Hotels</li>
-                            <li> Predictions</li>
-                            <li> Accounts</li>
-                            <li>Contact us</li>
-                        </ul>
-                    </div>
-
-                    <div>
-                        <p>Media<img class="support-footer" src=https://res.cloudinary.com/dtbjhs8a6/image/upload/v1568629227/samples/figma%20homepage/qkyithncohhx6pvmgotw.png></p>
-                        <ul>
-                            <li> Home</li>
-                            <li> Press kit</li>
-                            <li> Research</li>
-                            <li> Contact</li>
-                            <li>Search</li>
-                        </ul>
-                    </div>
-
+                <div> <a href="https://facebook.com"><i class="fab fa-facebook"></i></a>
+                    <a href="https://twitter.com"><i class="fab fa-twitter"></i></a>
+                    <a href="https://instagram.com"><i class="fab fa-instagram"></i></a>
+                    <a href="https://linkedin.com"><i class="fab fa-linkedin"></i></a>
+                    <a href="https://youtube.com"><i class="fab fa-youtube"></i></a>
+                    <a href="https://medium.com"><i class="fab fa-medium"></i></a>
                 </div>
             </div>
 
+            <div class="footer-2">
+                <div>
+                    <p class="footer-line">Hopper</p>
+                    <ul>
+                        <li> The app</li>
+                        <li> Features</li>
+                        <li> Deals</li>
+                        <li> <a style="color:grey;text-decoration:none;" href="../pages/homepagesubnav.html">Homepage Subnav</a> </li>
+                        <li>Terms of service</li>
+                    </ul>
+                </div>
+                <div>
+                    <p>Company</p>
+                    <ul>
+                        <li> About</li>
+                        <li> The data</li>
+                        <li> Investors</li>
+                        <li> Locations</li>
+                        <li><a style="color:grey;text-decoration:none;" href="../pages/careerdetails.html"> Careerdetails</a></li>
+                    </ul>
+                </div>
+
+                <div>
+                    <p>People</p>
+                    <ul>
+                        <li> Mission</li>
+                        <li><a style="color:grey;text-decoration:none;" href="../pages/companysubnav.html">Company-sub</a></li>
+                        <li> Values</li>
+                        <li> Humans</li>
+                        <li> <a style="color:grey;text-decoration:none;" href="./../pages/careerlist.html">Career<span style="background:coral;color:white;border-radius: 0.2rem;padding:0.1rem;margin-left:1rem;">47</span></a></li>
+                    </ul>
+                </div>
+
+                <div>
+                    <p>Support<img class="support-footer" src="https://res.cloudinary.com/dtbjhs8a6/image/upload/v1568629227/samples/figma%20homepage/qkyithncohhx6pvmgotw.png"></p>
+                    <ul>
+                        <li> Flights</li>
+                        <li> Hotels</li>
+                        <li> Predictions</li>
+                        <li> Accounts</li>
+                        <li>Contact us</li>
+                    </ul>
+                </div>
+
+                <div>
+                    <p>Media<img class="support-footer" src="https://res.cloudinary.com/dtbjhs8a6/image/upload/v1568629227/samples/figma%20homepage/qkyithncohhx6pvmgotw.png"></p>
+                    <ul>
+                        <li> Home</li>
+                        <li> Press kit</li>
+                        <li> Research</li>
+                        <li> Contact</li>
+                        <li>Search</li>
+                    </ul>
+                </div>
+
+            </div>
         </div>
-    </footer>
 
-    <div class="media-footer">
-        <img class="media-hop" src=https://res.cloudinary.com/dtbjhs8a6/image/upload/v1569152594/samples/new%20folder/d44fypvhzbshckeixtfl.png>
-        <ul>
-            <li class="media-line">Company<span style="background:coral;color:white;border-radius: 0.2rem;padding:0.1rem;margin-left:1rem;">21</span><img class="media-push1" src=https://res.cloudinary.com/dtbjhs8a6/image/upload/v1569152619/samples/new%20folder/yxb2buurny5yrprcslrx.png></li>
-            <li class="media-line">People<img class="media-push2" src=https://res.cloudinary.com/dtbjhs8a6/image/upload/v1569152619/samples/new%20folder/yxb2buurny5yrprcslrx.png></li>
-            <li class="media-line">Support<img class="media-push3" src=https://res.cloudinary.com/dtbjhs8a6/image/upload/v1569152619/samples/new%20folder/yxb2buurny5yrprcslrx.png></li>
-            <li>Insights<img class="media-push4" src=https://res.cloudinary.com/dtbjhs8a6/image/upload/v1569152619/samples/new%20folder/yxb2buurny5yrprcslrx.png></li>
-        </ul>
-        <div class="media-lang">
-            <p>Language<span><img class="media-push5" src="https://res.cloudinary.com/dtbjhs8a6/image/upload/v1568639192/samples/figma%20homepage/jp5v0zr7mtuisfme6icx.png"></p></span></div>
-        <div style="margin-bottom:2rem;">
-
-            <a href="https://facebook.com"><i class="fab fa-facebook"></i></a>
-            <a href="https://twitter.com"><i class="fab fa-twitter"></i></a>
-            <a href="https://instagram.com"><i class="fab fa-instagram"></i></a>
-            <a href="https://linkedin.com"><i class="fab fa-linkedin"></i></a>
-            <a href="https://youtube.com"><i class="fab fa-youtube"></i></a>
-            <a href="https://medium.com"><i class="fab fa-medium"></i></a>
-
-        </div>
-        <a style="color:grey;text-decoration:none;" class="media-terms" href="#">Terms of Service</a>
-
-        <p class="media-copy">&copy 2018 Hopper Inc.</p>
     </div>
+</footer>
 
-    <script src=js/main.js></script>
+<div class="media-footer">
+    <img class="media-hop" src="https://res.cloudinary.com/dtbjhs8a6/image/upload/v1569152594/samples/new%20folder/d44fypvhzbshckeixtfl.png">
+    <ul>
+        <li class="media-line">Company<span style="background:coral;color:white;border-radius: 0.2rem;padding:0.1rem;margin-left:1rem;">21</span><img class="media-push1" src="https://res.cloudinary.com/dtbjhs8a6/image/upload/v1569152619/samples/new%20folder/yxb2buurny5yrprcslrx.png"></li>
+        <li class="media-line">People<img class="media-push2" src="https://res.cloudinary.com/dtbjhs8a6/image/upload/v1569152619/samples/new%20folder/yxb2buurny5yrprcslrx.png"></li>
+        <li class="media-line">Support<img class="media-push3" src="https://res.cloudinary.com/dtbjhs8a6/image/upload/v1569152619/samples/new%20folder/yxb2buurny5yrprcslrx.png"></li>
+        <li>Insights<img class="media-push4" src="https://res.cloudinary.com/dtbjhs8a6/image/upload/v1569152619/samples/new%20folder/yxb2buurny5yrprcslrx.png"></li>
+    </ul>
+    <div class="media-lang">
+        <p>Language<span><img class="media-push5" src="https://res.cloudinary.com/dtbjhs8a6/image/upload/v1568639192/samples/figma%20homepage/jp5v0zr7mtuisfme6icx.png"></p></span></div>
+    <div style="margin-bottom:2rem;">
 
-</body>
+        <a href="https://facebook.com"><i class="fab fa-facebook"></i></a>
+        <a href="https://twitter.com"><i class="fab fa-twitter"></i></a>
+        <a href="https://instagram.com"><i class="fab fa-instagram"></i></a>
+        <a href="https://linkedin.com"><i class="fab fa-linkedin"></i></a>
+        <a href="https://youtube.com"><i class="fab fa-youtube"></i></a>
+        <a href="https://medium.com"><i class="fab fa-medium"></i></a>
 
-</html>
+    </div>
+    <a style="color:grey;text-decoration:none;" class="media-terms" href="#">Terms of Service</a>
+
+    <p class="media-copy">&copy 2018 Hopper Inc.</p>
+</div>
