--- a/scss/abstracts/_variables.scss
+++ b/scss/abstracts/_variables.scss
@@ -12,5 +12,14 @@ $timeWrap:#A57FD3;
 $calenderOrange:#E36624;
 $alertGreen:#63B67F;
 $alertYellow:#D99422;
-$calenderGreen:#6FC28B;
+$calenderGreen:#6FC28B;;
 $calenderYellow: #F0A02A;
+$color-black: #000000;
+$color-light-black: #383535;
+$color-dim-black: #555555;
+
+
+$bgImage: "https://res.cloudinary.com/dtbjhs8a6/image/upload/v1568629227/samples/figma%20homepage/kg1ynshuq2xtpam7zpld.png";
+$bgCareer: "https://res.cloudinary.com/dtbjhs8a6/image/upload/v1568412244/samples/figma%20homepage/xhcnv8qdg16hi5dw9ubq.jpg";
+$bgCareer1: "https://res.cloudinary.com/dtbjhs8a6/image/upload/v1568412218/samples/figma%20homepage/uyiw0ao0c5mxuw9l9a0w.png";
+$bgInfo: "https://res.cloudinary.com/dtbjhs8a6/image/upload/v1568412209/samples/figma%20homepage/ket8w15r36grfjgv3gcp.png";
