--- a/scss/layouts/_header.scss
+++ b/scss/layouts/_header.scss
@@ -1,10 +1,9 @@
 .navbar {
     display: flex;
-    font-size: 1.2rem;
-    margin-top: 3rem;
-    margin-left: 5rem;
+    justify-content: space-between;
     overflow: hidden;
-    background-color: $coral;
+    align-items: baseline;
+    margin-top: 2rem;
     .header-b-back {
         display: flex;
         margin-left: 1rem;
@@ -19,8 +18,8 @@
     }
     .navbar-ul {
         display: flex;
-        margin-left: 28rem;
-        width: 60vw;
+        width: 50vw;
+        justify-content: space-around;
         margin-top: 1rem;
         a {
             margin-right: 1.5rem;
@@ -83,5 +82,25 @@
             margin-left: 10rem;
             margin-bottom: 0.2rem;
         }
+    }
+}
+
+.header-button{
+        border: 1px solid $skyBlue; 
+        border-radius: 8px;
+}
+
+.people{
+    border-right: 0.5px solid $midGrey;
+    
+}
+.supporticon{
+    @include supportIcon();
+}
+
+
+@media(max-width:500px){
+    .nav{
+       display: none;
     }
 }
