--- a/css/main.css
+++ b/css/main.css
@@ -693,6 +693,8 @@ body {
   .features .features1 {
     height: 100px;
     width: 100px;
+    text-align: center;
+    font-size: 10px;
     margin-right: 20px;
     box-shadow: 0px 5px 25px rgba(0, 0, 0, 0.05);
     border-radius: 8px; }
