--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -121,6 +121,8 @@ body {
   .features1 {
       height: 100px;
       width: 100px;
+      text-align: center;
+      font-size: 10px;
       margin-right: 20px;
       box-shadow: 0px 5px 25px rgba(0,0,0,0.05);
       border-radius: 8px;
@@ -444,7 +446,7 @@ body {
         width: 80px;
         margin-top: 20%;
         padding-right: 5%;
-
+    
         &__image{
             width: 80px;
             justify-content: center;
@@ -461,7 +463,9 @@ body {
             
         }
     }
+      
   }
+  
 
   .article .career {
     @include hidden();
