Hopper.com Worked on the homepage(home.html) Worked on the company page(The upper part) Worked on the people page(From making the world) Worked on the term of services page All pages are desktop and mobile responsive

--- a/components/header.html
+++ b/components/header.html
@@ -10,7 +10,7 @@
 <body>
     <header id="home">
         <nav class="navbar">
-        <div class="container">
+        <div class="containe">
         
             <div><img class="headerimg" src=https://res.cloudinary.com/dtbjhs8a6/image/upload/v1568412230/samples/figma%20homepage/kyr3ezvbrclpaboop9jw.png></div>
             <ul class="nav">
