--- a/scss/layouts/_header.scss
+++ b/scss/layouts/_header.scss
@@ -4,7 +4,7 @@
     padding-bottom: 0.3rem;
     margin-top: 2rem;
 
-    .container{
+    .containe{
        
         @include conTain;
         display:grid;
@@ -30,12 +30,12 @@
     }
 
     .header-button{
-        border: 1px solid #01AAE4; 
+        border: 1px solid $skyBlue; 
         border-radius: 8px;
 }
 
 .people{
-    border-right: 0.5px solid grey;
+    border-right: 0.5px solid $midGrey;
     
 }
 .supporticon{
@@ -51,3 +51,62 @@
 
 
 }
+
+.navber{
+
+    margin-top: 10%;
+    font-size: 1.2rem;
+    padding-top: 2rem;
+    padding-bottom: 0.3rem;
+    margin-top: 2rem;
+  
+    .contain{
+        @include conTain;
+        display:grid;
+        grid-template-columns: repeat(2, 1fr);
+        margin-right: 6rem;
+      }
+  
+    .navv{
+        justify-self:flex-end;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+  
+    
+  
+    .navv a{
+        padding: 0 1rem;
+        color: $white;
+    }
+  
+    .headerimage{
+        margin-left: 13rem;
+    }
+  
+    .header--button{
+        border: 1px solid $white; 
+        border-radius: 8px;
+        padding: 5px;
+  
+  }
+  
+  .people{
+    border-right: 0.5px solid $midGrey;
+    
+  }
+  .supporticon{
+    @include supportIcon();
+  }
+  
+  
+  
+  @media(max-width:500px){
+    .navv{
+       display: none;
+    }
+  }
+  
+  
+  }
