perferted People section and and job section, there's still a bit of work to be carried out on company and career-section.

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -16,9 +16,14 @@
 @import 'layouts/_navigation';
 @import 'layouts/_sidebar';
 
+
 @import 'pages/_about'; 
 @import 'pages/_contact'; 
 @import 'pages/_home'; 
+@import 'pages/_careerlist';
+@import 'pages/job';
+@import 'pages/people';
+@import 'pages/_company';
 
 @import 'themes/_admin'; 
 @import 'themes/_themes'; 
